Closed
Bug 169827
Opened 23 years ago
Closed 23 years ago
[typeaheadfind] After typing >3 not found characters, can't typeaheadfind again
Categories
(SeaMonkey :: Find In Page, defect)
SeaMonkey
Find In Page
Tracking
(Not tracked)
VERIFIED
FIXED
People
(Reporter: tuukka.tolvanen, Assigned: aaronlev)
References
Details
Attachments
(1 file)
|
1.63 KB,
patch
|
caillon
:
review+
alecf
:
superreview+
|
Details | Diff | Splinter Review |
User-Agent: Mozilla/5.0 (X11; U; Linux i686; en-US; rv:1.2b) Gecko/20020918
Build Identifier: Mozilla/5.0 (X11; U; Linux i686; en-US; rv:1.2b) Gecko/20020918
.
Reproducible: Always
Steps to Reproduce:
1. Type enough characters to trigger the quickly mashed chars fix of bug 166993
2. Hit esc
3. Type some more characters
Actual Results:
2. Esc does not delete the found-highlight (if any);
3. Typeaheadfind doesn't happen
Expected Results:
2. Esc should reset the bad state and deselect the matched-highlight;
3. Typeaheadfind should happen
Scrolling will cause the typeaheadfind-highlight to turn into a regular
selection, and then typeaheadfind will work again.
Comment 2•23 years ago
|
||
Confirming and marking NEW (2002092108 on Win2k).
OS -> All
Status: UNCONFIRMED → NEW
Ever confirmed: true
OS: Linux → All
Comment 3•23 years ago
|
||
actually, after using type ahead find (on three platforms: win2k, linux and mac
os x, today's moz trunk build), this is prolly the most frequent issue i
encounter. true, it could be my own typing habits, but it's an annoying impediment.
nominating for buffy.
aaron, when you're next in the office, perhaps you could come over and watch me
when i run into this. perhaps we could narrow down the issue, if it'd help
resolve it. :)
| Reporter | ||
Comment 4•23 years ago
|
||
fwiw, moving the check for esc key up before the key-mashing condition
(mBadKeysSinceMatch >= kMaxBadCharsBeforeCancel) check fixes this
| Assignee | ||
Comment 5•23 years ago
|
||
Yeah, that should be the right fix. I want to check in bug 167921 first before I
make a patch.
| Reporter | ||
Comment 6•23 years ago
|
||
I suspected as much ;)
| Assignee | ||
Comment 7•23 years ago
|
||
Seeking r=
Comment 8•23 years ago
|
||
Comment on attachment 100475 [details] [diff] [review]
Does key mashing check after check for VK_ESCAPE
Makes sense. r=caillon.
Attachment #100475 -
Flags: review+
| Assignee | ||
Comment 9•23 years ago
|
||
seeking sr=alecf
Comment 10•23 years ago
|
||
Comment on attachment 100475 [details] [diff] [review]
Does key mashing check after check for VK_ESCAPE
sr=alecf
Attachment #100475 -
Flags: superreview+
Comment 11•23 years ago
|
||
forgot to add: F3 didn't help (on win2k or linux) to unclog this, but accel-G
did (all platforms).
| Assignee | ||
Comment 12•23 years ago
|
||
checked in
Status: NEW → RESOLVED
Closed: 23 years ago
Resolution: --- → FIXED
Comment 13•23 years ago
|
||
aah, much better. :) looks fixed using 2002.09.26.04 mozilla trunk bits.
after i type several junk chars, i get "Type ahead find stopped." however, i'm
no longer in the clogged state: i can hit backspace (delete on mac) and i can
continue adding chars to the non-junk portion of the string. i can also cancel
my previous non-junk string and start over. don't have to hit accel-G at all
--it's a lot more smooth. thanks!
Status: RESOLVED → VERIFIED
| Assignee | ||
Comment 14•23 years ago
|
||
You're welcome - always happy to help unclog someone.
Comment 15•23 years ago
|
||
*** Bug 171164 has been marked as a duplicate of this bug. ***
Updated•18 years ago
|
Product: Core → SeaMonkey
You need to log in
before you can comment on or make changes to this bug.
Description
•