Bug 169827. Escape should cancel million keystrokes protection in typeaheadfind. r=caillon, sr=alecf